# design-patterns-examples

./: CMakeLists.txt
abstract_factory/: Button.h  CMakeLists.txt  Checkbox.h  GUIFactory.h  MacButton.cpp  MacButton.h  MacCheckbox.cpp  MacCheckbox.h  MacGuiFactory.cpp  MacGuiFactory.h  WinButton.cpp  WinButton.h  WinCheckbox.cpp  WinCheckbox.h  WinGuiFactory.cpp  WinGuiFactory.h  abstract_factory_test.cpp
builder/: Builder.h  CMakeLists.txt  Car.cpp  Car.h  CarBuilder.cpp  CarBuilder.h  CarManual.cpp  CarManual.h  CarManualBuilder.cpp  CarManualBuilder.h  builder_test.cpp
factory/: Button.h  CMakeLists.txt  Dialog.cpp  Dialog.h  HTMLButton.cpp  HTMLButton.h  HTMLDialog.cpp  HTMLDialog.h  WindowsButton.cpp  WindowsButton.h  WindowsDialog.cpp  WindowsDialog.h  factory_test.cpp
prototype/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  test_prototype.cpp
singleton/: CMakeLists.txt  Database.h  test_singleton.cpp
